Styling changes to fix overflow problems with the cards

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -209,6 +209,7 @@ main {
     gap: 4%;
     margin: 0 1rem;
     position: relative;
+    margin-bottom: 3rem;
 
     .card-arrow::after {
         content: "";
@@ -247,6 +248,7 @@ main {
 
     @media only screen and (max-width: $medium-break) {
         grid-template-columns: 1fr 1fr;
+        margin-bottom: 4rem;
     }
 
     @media only screen and (max-width: $small-break) {
